# OpenCV-assignments

./: .gitignore  README.md
AI/fuzzy-01/: CMakeLists.txt  main.cpp
PRO5/: CMakeLists.txt  rb-pro5
PRO5/src/: hist.cpp  hist.h
ROB/asgmt-01/: CMakeLists.txt  main.cpp  rob-asgmt-01
ROB/asgmt-01/src/: bug.cpp  bug.h  core.cpp  core.h  draw.cpp  draw.h  kernel.cpp  kernel.h
ROB/asgmt-02/: CMakeLists.txt  main.cpp
ROB/asgmt-02/src/: ansi.h
VIS/asgmt-01/: CMakeLists.txt  main.cpp  vis-asgmt-01
VIS/asgmt-01/src/: Kernel.cpp
VIS/asgmt-02/: CMakeLists.txt  main.cpp  vis-asgmt-02
VIS/asgmt-02/src/: filter.cpp  filter.h  kernel.cpp  kernel.h
VIS/asgmt-03/: CMakeLists.txt  main.cpp  vis-asgmt-03
VIS/asgmt-03/src/: hist.cpp  hist.h
asgmt-01/: CMakeLists.txt  main.cpp
